--- a/code/syarm_app/Cargo.toml
+++ b/code/syarm_app/Cargo.toml
@@ -1,9 +1,12 @@
 [package]
 name = "syarm_app"
-version = "0.1.0"
+version = "0.1.2"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-syarm_lib = { git = "https://github.com/SamuelNoesslboeck/syarm_lib" }
+actix = "0.13.0"
+actix-web = "4"
+actix-web-actors = "4.1.0"
+syarm_lib = { path = "../../../../Libraries/syarm_lib" } # { git = "https://github.com/SamuelNoesslboeck/syarm_lib" }
