--- a/code/syarm_app/Cargo.toml
+++ b/code/syarm_app/Cargo.toml
@@ -13,4 +13,4 @@ actix-web-actors = "4.1.0"
 serde = { version = "1.0.104", features = ["derive"] }
 serde_json = "1.0.48"
 
-syarm_lib = { path = "../../../../Libraries/syarm_lib" } # { git = "https://github.com/SamuelNoesslboeck/syarm_lib" }
+sybot_lib = { path = "../../../../Libraries/sybot_lib" } # { git = "https://github.com/SamuelNoesslboeck/syarm_lib" }
